@@ -94,6 +94,7 @@ Never ending source of new ideas and main bug hunter. Icons and Logo</td>
 <li>Norbert Unterberg</li>
 <li>Valik</li>
 <li>George Wieggers</li>
+<li>Leon Zandman</li>
 </ul>
 </div>
 
